- added a bunch more code to initialize BLE

--- a/software/line-sensor/prj-line-sensor-wireless-stm32wb55rg/main-line-sensor-wireless-stm32wb55rg.vcxproj
+++ b/software/line-sensor/prj-line-sensor-wireless-stm32wb55rg/main-line-sensor-wireless-stm32wb55rg.vcxproj
@@ -74,9 +74,16 @@
     <None Include="stm32wb.xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src-line-sensor-wireless\application.c" />
     <ClCompile Include="..\src-line-sensor-wireless\application\hw_timerserver.c" />
     <ClCompile Include="..\src-line-sensor-wireless\application\hw_uart.c" />
+    <ClCompile Include="..\src-line-sensor-wireless\buttons.c" />
+    <ClCompile Include="..\src-line-sensor-wireless\debug.c" />
+    <ClCompile Include="..\src-line-sensor-wireless\error.c" />
+    <ClCompile Include="..\src-line-sensor-wireless\exti.c" />
     <ClCompile Include="..\src-line-sensor-wireless\global_data.c" />
+    <ClCompile Include="..\src-line-sensor-wireless\gpio.c" />
+    <ClCompile Include="..\src-line-sensor-wireless\led.c" />
     <ClCompile Include="..\src-line-sensor-wireless\main.c" />
     <ClCompile Include="..\src-line-sensor-wireless\sequencer\stm32_seq.c" />
     <ClCompile Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal.c" />
@@ -88,19 +95,34 @@
     <ClCompile Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal_hsem.c" />
     <ClCompile Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal_ipcc.c" />
     <ClCompile Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal_pwr.c" />
+    <ClCompile Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal_pwr_ex.c" />
     <ClCompile Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal_rcc.c" />
+    <ClCompile Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal_rcc_ex.c" />
     <ClCompile Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal_rtc.c" />
     <ClCompile Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal_uart.c" />
+    <ClCompile Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal_uart_ex.c" />
     <ClCompile Include="..\src-line-sensor-wireless\stm32\stm32wbxx_nucleo.c" />
+    <ClCompile Include="..\src-line-sensor-wireless\system_clocks.c" />
+    <ClCompile Include="..\src-line-sensor-wireless\tiny_lpm\stm32_lpm.c" />
+    <ClCompile Include="..\src-line-sensor-wireless\uart.c" />
+    <ClCompile Include="..\src-line-sensor-wireless\utilities\dbg_trace.c" />
     <ClCompile Include="..\src-line-sensor-wireless\utilities\otp.c" />
+    <ClCompile Include="..\src-line-sensor-wireless\utilities\stm_queue.c" />
+    <ClInclude Include="..\src-line-sensor-wireless\application.h" />
     <ClInclude Include="..\src-line-sensor-wireless\application\app_common.h" />
     <ClInclude Include="..\src-line-sensor-wireless\application\app_conf.h" />
     <ClInclude Include="..\src-line-sensor-wireless\application\hw_conf.h" />
     <ClInclude Include="..\src-line-sensor-wireless\application\hw_if.h" />
     <ClInclude Include="..\src-line-sensor-wireless\application\utilities_conf.h" />
     <ClInclude Include="..\src-line-sensor-wireless\ble_thread\hw.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\buttons.h" />
     <ClInclude Include="..\src-line-sensor-wireless\cmsis\cmsis_compiler.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\debug.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\error.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\exti.h" />
     <ClInclude Include="..\src-line-sensor-wireless\global_data.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\gpio.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\led.h" />
     <ClInclude Include="..\src-line-sensor-wireless\sequencer\stm32_seq.h" />
     <ClInclude Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal.h" />
     <ClInclude Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal_conf.h" />
@@ -112,11 +134,19 @@
     <ClInclude Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal_hsem.h" />
     <ClInclude Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal_ipcc.h" />
     <ClInclude Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal_pwr.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal_pwr_ex.h" />
     <ClInclude Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal_rcc.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal_rcc_ex.h" />
     <ClInclude Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal_rtc.h" />
     <ClInclude Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal_uart.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal_uart_ex.h" />
     <ClInclude Include="..\src-line-sensor-wireless\stm32\stm32wbxx_nucleo.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\system_clocks.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\tiny_lpm\stm32_lpm.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\uart.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\utilities\dbg_trace.h" />
     <ClInclude Include="..\src-line-sensor-wireless\utilities\otp.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\utilities\stm_queue.h" />
     <ClInclude Include="..\src-line-sensor-wireless\utilities\utilities_common.h" />
     <None Include="stm32wb.props" />
     <ClCompile Include="$(BSP_ROOT)\STM32WBxxxx\StartupFiles\startup_stm32wb55xx_cm4.c" />
