--- a/software/line-sensor/prj-line-sensor-wireless-stm32wb55rg/main-line-sensor-wireless-stm32wb55rg.vcxproj
+++ b/software/line-sensor/prj-line-sensor-wireless-stm32wb55rg/main-line-sensor-wireless-stm32wb55rg.vcxproj
@@ -42,7 +42,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|VisualGDB'">
     <ClCompile>
       <CLanguageStandard>C11</CLanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)\common\lib-stm32wb;$(ProjectDir)\..\src-line-sensor-wireless\stm32;$(ProjectDir)\..\src-line-sensor-wireless\cmsis;$(ProjectDir)\..\src-line-sensor-wireless\application;$(ProjectDir)\..\src-line-sensor-wireless\ble_thread;%(ClCompile.AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\common\lib-stm32wb;$(ProjectDir)\..\src-line-sensor-wireless\stm32;$(ProjectDir)\..\src-line-sensor-wireless\application;$(ProjectDir)\..\src-line-sensor-wireless\ble;$(ProjectDir)\..\src-line-sensor-wireless\ble_thread;$(ProjectDir)\..\src-line-sensor-wireless\ble_thread\tl;$(ProjectDir)\..\src-line-sensor-wireless\cmsis;$(ProjectDir)\..\src-line-sensor-wireless\utilities;%(ClCompile.AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>DEBUG=1;USE_STM32WBXX_NUCLEO=1;%(ClCompile.PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
@@ -55,7 +55,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|VisualGDB'">
     <ClCompile>
       <CLanguageStandard>C11</CLanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)\common\lib-stm32wb;$(ProjectDir)\..\src-line-sensor-wireless\stm32;$(ProjectDir)\..\src-line-sensor-wireless\cmsis;$(ProjectDir)\..\src-line-sensor-wireless\application;$(ProjectDir)\..\src-line-sensor-wireless\ble_thread;%(ClCompile.AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\common\lib-stm32wb;$(ProjectDir)\..\src-line-sensor-wireless\stm32;$(ProjectDir)\..\src-line-sensor-wireless\application;$(ProjectDir)\..\src-line-sensor-wireless\ble;$(ProjectDir)\..\src-line-sensor-wireless\ble_thread;$(ProjectDir)\..\src-line-sensor-wireless\ble_thread\tl;$(ProjectDir)\..\src-line-sensor-wireless\cmsis;$(ProjectDir)\..\src-line-sensor-wireless\utilities;%(ClCompile.AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>NDEBUG=1;RELEASE=1;USE_STM32WBXX_NUCLEO=1;%(ClCompile.PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
@@ -75,8 +75,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src-line-sensor-wireless\application.c" />
+    <ClCompile Include="..\src-line-sensor-wireless\application\hw_ipcc.c" />
     <ClCompile Include="..\src-line-sensor-wireless\application\hw_timerserver.c" />
     <ClCompile Include="..\src-line-sensor-wireless\application\hw_uart.c" />
+    <ClCompile Include="..\src-line-sensor-wireless\ble_thread\tl\shci_tl.c" />
+    <ClCompile Include="..\src-line-sensor-wireless\ble_thread\tl\shci_tl_if.c" />
+    <ClCompile Include="..\src-line-sensor-wireless\ble_thread\tl\tl_mbox.c" />
     <ClCompile Include="..\src-line-sensor-wireless\buttons.c" />
     <ClCompile Include="..\src-line-sensor-wireless\debug.c" />
     <ClCompile Include="..\src-line-sensor-wireless\error.c" />
@@ -107,14 +111,21 @@
     <ClCompile Include="..\src-line-sensor-wireless\uart.c" />
     <ClCompile Include="..\src-line-sensor-wireless\utilities\dbg_trace.c" />
     <ClCompile Include="..\src-line-sensor-wireless\utilities\otp.c" />
+    <ClCompile Include="..\src-line-sensor-wireless\utilities\stm_list.c" />
     <ClCompile Include="..\src-line-sensor-wireless\utilities\stm_queue.c" />
     <ClInclude Include="..\src-line-sensor-wireless\application.h" />
     <ClInclude Include="..\src-line-sensor-wireless\application\app_common.h" />
     <ClInclude Include="..\src-line-sensor-wireless\application\app_conf.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\application\ble_conf.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\application\ble_dbg_conf.h" />
     <ClInclude Include="..\src-line-sensor-wireless\application\hw_conf.h" />
     <ClInclude Include="..\src-line-sensor-wireless\application\hw_if.h" />
     <ClInclude Include="..\src-line-sensor-wireless\application\utilities_conf.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\ble\ble_common.h" />
     <ClInclude Include="..\src-line-sensor-wireless\ble_thread\hw.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\ble_thread\tl\mbox_def.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\ble_thread\tl\shci_tl.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\ble_thread\tl\tl.h" />
     <ClInclude Include="..\src-line-sensor-wireless\buttons.h" />
     <ClInclude Include="..\src-line-sensor-wireless\cmsis\cmsis_compiler.h" />
     <ClInclude Include="..\src-line-sensor-wireless\debug.h" />
@@ -141,11 +152,13 @@
     <ClInclude Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal_uart.h" />
     <ClInclude Include="..\src-line-sensor-wireless\stm32\stm32wbxx_hal_uart_ex.h" />
     <ClInclude Include="..\src-line-sensor-wireless\stm32\stm32wbxx_nucleo.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\stm32\stm32_wpan_common.h" />
     <ClInclude Include="..\src-line-sensor-wireless\system_clocks.h" />
     <ClInclude Include="..\src-line-sensor-wireless\tiny_lpm\stm32_lpm.h" />
     <ClInclude Include="..\src-line-sensor-wireless\uart.h" />
     <ClInclude Include="..\src-line-sensor-wireless\utilities\dbg_trace.h" />
     <ClInclude Include="..\src-line-sensor-wireless\utilities\otp.h" />
+    <ClInclude Include="..\src-line-sensor-wireless\utilities\stm_list.h" />
     <ClInclude Include="..\src-line-sensor-wireless\utilities\stm_queue.h" />
     <ClInclude Include="..\src-line-sensor-wireless\utilities\utilities_common.h" />
     <None Include="stm32wb.props" />
